# task-manger-elixir

./: README.md
task-manager-cli/: Cargo.toml
task-manager-cli/src/: main.rs
task-manager-frontend/: package-lock.json
task-manager-frontend/src/: App.js
task_manager/: mix.exs
task_manager/assets/: tailwind.config.js
task_manager/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
task_manager/lib/: task_manager_web.ex
task_manager/lib/task_manager/: application.ex
task_manager/lib/task_manager_web/: endpoint.ex  router.ex  telemetry.ex
task_manager/lib/task_manager_web/controllers/: task_controller.ex
task_manager/test/support/: conn_case.ex
