[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }  # for HTTP requests and JSON handling
serde = { version = "1.0", features = ["derive"] }   # for serialization/deserialization
serde_derive = "1.0"                                # for macros
tokio = { version = "1", features = ["full"] }      # async runtime

# Optional for logging and other utilities
log = "0.4"
env_logger = "0.9"
